Update app with all requested features